<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="177dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flexlogo"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_record"
        android:onClick="AddRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="166dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:text="@string/delete_record"
        android:onClick="DeleteRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextSizeCheck,TextSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:text="@string/update_record"
        android:onClick="UpdateRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="166dp"
        android:layout_height="67dp"
        android:text="@string/reports"
        android:onClick="CheckReports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.253" />
</androidx.constraintlayout.widget.ConstraintLayout>