<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecord">

    <EditText
        android:id="@+id/txtupdtatename"
        android:layout_width="302dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtupdtatedept"
        android:layout_width="299dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_department"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtatename"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtupdtateregno"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_reg_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtatedept"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtupdtatecgpa"
        android:layout_width="306dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Enter Cgpa"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtateregno"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtupdtateemail"
        android:layout_width="304dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtatecgpa"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnupdateecord"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:layout_marginBottom="72dp"
        android:text="@string/save"
        android:onClick="SaveRecord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtateemail"
        app:layout_constraintVertical_bias="0.766" />

</androidx.constraintlayout.widget.ConstraintLayout>